# wiwik

./: .coveragerc  .dockerignore  .editorconfig  .env  .flake8  .gitignore  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-report-a-bug.yml  02-feature-request.yml  config.yml
.github/workflows/: docker-image.yml  publish-docs.yml  test.yml
arch/: index.html
arch/configuration/: index.html
arch/deployment/: index.html
arch/env-vars/: index.html
config/k8s/: configmap.yaml  gunicorn.yaml  initial-jobs.yaml  kustomization.yaml  postgres.yaml  redis.yaml  rqscheduler.yaml  rqworker.yaml
config/template/: gunicorn.service  meilisearch.config.toml  meilisearch.service  nginx.django_site.conf  rqworker.service  rsyslog.gunicorn.conf  rsyslog.rqscheduler.conf  rsyslog.rqworker.conf
config/wiwik-chart/: Chart.yaml  values.yaml
config/wiwik-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
contributing/: index.html
docs/: faq.md  index.md  local-dev.md  requirements.txt  wiwik-insiders.md
docs/arch/: articles.md  badges.md  configuration.md  deployment.md  env-vars.md  forum.md  index.md  similarity.md  spaces.md  tags.md  userauth.md  wiwik_lib.md
docs/contributing/: CODE_OF_CONDUCT.md  index.md
docs/deployment/: configuration.md  index.md  local-dev.md  meilisearch.md
docs/features/: badges.md  index.md  invitation.md  oauth.md  permissions.md  search.md  similarity.md  slack.md
docs/stylesheets/: extra.css
ext/slack-scanner/: slack-scan.py
faq/: index.html
features/: index.html
features/badges/: index.html
features/invitation/: index.html
features/oauth/: index.html
features/search/: index.html
features/similarity/: index.html
features/slack/: index.html
forum/: db.sqlite3  manage.py
forum/articles/: admin.py  apps.py  models.py  urls.py  views.py
forum/articles/migrations/: 0001_initial.py  0002_alter_article_options.py  0003_auto_20231114_2033.py
forum/articles/tests/: base.py  test_article_views.py  test_view_article_create.py  test_view_article_delete.py  test_view_article_edit.py
forum/badges/: admin.py  apps.py  jobs.py  models.py  populate_db.py  tests.py  urls.py  views.py
forum/badges/logic/: __init__.py  answer_related_badges.py  moderator_related_badges.py  participation_related_badges.py  question_related_badges.py  tag_related_badges.py  utils.py
forum/badges/migrations/: 0001_initial.py  0001_squashed_0003_auto_20211211_1535.py
forum/common/: __init__.py  test_utils.py  utils.py
forum/features/: environment.py  forum.feature
forum/features/steps/: fixtures.py  forum-steps.py
forum/forum/: apps.py  urls.py
forum/forum/admin/: __init__.py  admin_answer.py  admin_comment.py  admin_follows.py  admin_interaction.py  admin_question.py  admin_question_bookmark.py  admin_tag.py  admin_user_tag_stats.py  input_filter.py  properties.py
forum/forum/integrations/: slack_api.py
forum/forum/jobs/: __init__.py  base.py  calculate_tag_follow_stats.py  calculate_user_tag_stats.py  check_urls.py  config_updated_signal.py  moderator_check.py  notify_user.py  others.py  populate_meilisearch.py  purge_data.py  reports_jobs.py  user_impact.py
forum/forum/management/: tools.py
forum/forum/migrations/: 0001_initial.py  0001_squashed_0007_question_space.py  0002_initial.py  0002_question_answers_count_question_type_question_views.py  0003_remove_questionadditionaldata_views.py  0004_remove_questionadditionaldata_link_and_more.py  0005_question_last_activity.py  0006_alter_question_last_activity.py  0007_alter_questionview_author_and_more.py  0008_alter_question_answers_count_and_more.py  0009_rename_questioninvitetoanswer_postinvitation_and_more.py  0010_alter_question_type.py  0011_rename_tagfollow_usertagstats.py  0012_delete_questionfollow.py  0013_answer_parent.py  0014_alter_question_type.py  0015_voteactivity_type_alter_question_status_updated_at.py  0016_alter_voteactivity_type.py
forum/forum/models/: __init__.py  base.py  comments.py  drafts.py  following.py  question_addins.py  stats.py  voting.py
forum/forum/reports/: __init__.py  activity_email_report.py
forum/forum/templates/: 404.html  500.html  base.html  markdown-help.html  partial.user.navbar.html  tailwind-base.html  under-construction.html
forum/forum/tests/: base.py  test_admin.py  test_dedent_text.py  test_pen_test.py  test_search.py  test_templates.py
forum/landingpage/: admin.py  apps.py  models.py  urls.py  views.py
forum/main/: asgi.py  urls.py  wsgi.py
forum/similarity/: admin.py  apps.py  calculate_similarity_job.py  models.py  tests.py  urls.py  views.py
forum/spaces/: admin.py  apps.py  models.py  tests.py  urls.py
forum/static/: markdown-cheat-sheet.md
forum/static/js/: end.js  (+7 more)
forum/tags/: admin.py  apps.py  models.py  urls.py  utils.py
forum/userauth/: apps.py  models.py  urls.py  utils.py
forum/wiwik_lib/: adapters.py  admin.py  advanced_model_manager.py  apps.py  context_processor.py  middleware.py  models.py  urls.py  utils.py
local-dev/: index.html
scripts/: backup_db.sh  calc_tag_stats.sh  issues_mover.py  reset.sh  rqworker.sh  run_tests.sh  update_server.sh
search/: search_index.json
wiwik-insiders/: index.html
(+335 files in other folders)
