[tool.poetry]
name = "wiwik"
version = "0.1.0"
description = "What I wish I knew knowledge management system"
maintainers = ["Daniel Moran <daniel@moransoftware.ca>"]
authors = ["Daniel Moran <daniel@moransoftware.ca>"]
license = "Fair Source 50"
readme = "README.md"
packages = [
    { include = "forum" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Django = "^5.0"
django-allauth = { extras = ["socialaccount"], version = "^0.63.2" }

pyparsing = "^3.0"
python-dateutil = "^2.8"
sqlparse = "^0.5"
nltk = "^3.9"
django-tasks-scheduler = "^2.0" # Async jobs scheduler using redis
django-admin-numeric-filter = "^0.1" # Django-admin filters
django-admin-rangefilter = "^0.13" # Django-admin filters
django-model-utils = "^4.4" # Django-admin filters
django-ipware = "^7.0" # For identifying IP location
geoip2 = "^4.8" # For identifying IP location
pillow = "^10.2" # For image field
scikit-learn = "^1.4" # For similarity TF-IDF
numpy = "^2.0" # For similarity TF-IDF

gunicorn = "^23.0" # Running configuration
python-dotenv = "^1.0" # Running configuration

# Frontend related
django-compressor = "^4.3"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
markdown = "^3.4"
bleach = "^6.0"
pymdown-extensions = "^10.4"

# 3rd party integrations
slack-sdk = "^3.21"
meilisearch = "^0.31" # meilisearch driver
redis = "^5.0" # Redis driver, for redis-cache
psycopg = "^3.2.2"
django-constance = "^3.1.0"
psycopg-c = "^3.1.19"


[tool.poetry.dev-dependencies]
poetry = "^1.8.1"
fakeredis = "^2.20"
coverage = "^7.5"
django-coverage-plugin = "^3.0"
beautifulsoup4 = "^4.12"
django-debug-toolbar = "^4.4"
db-to-sqlite = "^1.4"
flake8-pyproject = "^1.2.3"
behave-django = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = [
    '**/migrations/**',
    '__init__.py',
    '.venv/**',
    'private/**'
]
